sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:26: error: value ou is not a member of Boolean
}while (parc1==true ou parc2==true)
                    ^